<resources>
    <string name="app_name">swoosh</string>
    <string name="backgroun_image">Backgroun image</string>
    <string name="swoosh_logo">Swoosh logo</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">NEXT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominete_the_league">Find a team in your city, and dominete the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">Finish</string>
    <string name="coed_beginner_league">Looking for a co-ed beginner league near you...</string>
</resources>
